examples/invalid/01_top_level_let_missing_type.lane
module Examples.Invalid01
// invalid: top-level let must include an explicit type annotation
pub let answer = 42
